changes to menu

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/index.html'">webdev - project-1
     </button>
     <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj2/index.html'">webdev - project-2
-    </button>>
+    </button>
     <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj3/index.html'">webdev - project-3
     </button>
     <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj4/index.html'">webdev - project-4
-    </button>>
+    </button>
 
     
 </body>
