--- a/prj1/index.html
+++ b/prj1/index.html
@@ -1,1 +1,21 @@
-<h1>WORKING</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <title>Calculators </title>
+</head>
+<body>
+    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/1'">
+        calculator 1
+    </button>
+    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/2'">
+        calculator 2
+    </button>
+    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/3'">
+        calculator 3
+    </button>
+    
+</body>
+</html>
