debug-button link to calculators

--- a/prj1/index.html
+++ b/prj1/index.html
@@ -7,13 +7,13 @@
     <title>Calculators </title>
 </head>
 <body>
-    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/1'">
+    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/1.html'">
         calculator 1
     </button>
-    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/2'">
+    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/2.html'">
         calculator 2
     </button>
-    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/3'">
+    <button class="" onclick="windows.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/3.html'">
         calculator 3
     </button>
     
