--- a/prj1/index.html
+++ b/prj1/index.html
@@ -7,15 +7,18 @@
     <title>Calculators </title>
 </head>
 <body>
-    <button class="" onclick="window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/1.html'">
+    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/1.html'">
         calculator 1
     </button>
-    <button class="" onclick="window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/2.html'">
+    <br>
+    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/2.html'">
         calculator 2
     </button>
-    <button class="" onclick="window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/3.html'">
+    <br>
+    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/3.html'">
         calculator 3
     </button>
+    <br>
     
 </body>
 </html>
