added index.css , few design changes-index.html,prj1/index.html

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Shubhaprasad Padhy</title>
     
 </head>
-<body>
-    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/index.html'">webdev - project-1
+<body style="margin-top: 5%; padding: 1%;">
+    <button class="pp btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/index.html'">webdev - project-1
     </button>
-    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj2/index.html'">webdev - project-2
+    <button class="pp btn btn-outline-secondary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj2/index.html'">webdev - project-2
     </button>
-    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj3/index.html'">webdev - project-3
+    <button class="pp btn btn-outline-success container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj3/index.html'">webdev - project-3
     </button>
-    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj4/index.html'">webdev - project-4
+    <button class="pp btn btn-outline-danger container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj4/index.html'">webdev - project-4
     </button>
 
     
