--- a/prj1/index.html
+++ b/prj1/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Calculators </title>
 </head>
-<body>
-    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/1.html'">
+<body style="margin-top: 10%; padding: 1%;">
+    <button class="pp btn btn-outline-primary container-fluid"  onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/1.html'">
         calculator 1
     </button>
     <br>
-    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/2.html'">
+    <button class="pp btn btn-outline-warning container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/2.html'">
         calculator 2
     </button>
     <br>
-    <button class="btn btn-outline-primary container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/3.html'">
+    <button class="pp btn btn-outline-danger container-fluid" onclick=" window.location.href='https://blixard.github.io/StellarCodingProjects/prj1/themes/3.html'">
         calculator 3
     </button>
     <br>
